Fixed: Edit button for Remote Path Mapping hidden on small screens

--- a/frontend/src/Settings/DownloadClients/RemotePathMappings/RemotePathMappings.css
+++ b/frontend/src/Settings/DownloadClients/RemotePathMappings/RemotePathMappings.css
@@ -5,11 +5,15 @@
 }
 
 .host {
-  flex: 0 0 300px;
+  @add-mixin truncate;
+
+  flex: 0 1 300px;
 }
 
 .path {
-  flex: 0 0 400px;
+  @add-mixin truncate;
+
+  flex: 0 1 400px;
 }
 
 .addRemotePathMapping {
